<resources>
    <string name="app_name">CalcuTaylor</string>
    <string name="clear">Clear</string>
    <string name="percent">%</string>
    <string name="divide">/</string>
    <string name="multiply">X</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="add">+</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="equals">=</string>
    <string name="zero">0</string>
    <string name="decimal">.</string>
    <string name="minus">-</string>
    <string name="about">About</string>
    <string name="close">Close</string>
    <string name="calcuTaylor_version_1_0_c_2022">CalcuTaylor Version 1.0 (C)2022</string>
    <string name="div_by_zero">Divide by Zero Error</string>
    <string name="images">Images</string>
    <string name="calculator">Calculator</string>
    <string name="history_text">History Text</string>
    <string name="close_history">Close History</string>
    <string name="history">History</string>
</resources>